# ScriptUnpacker

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/data/: resourceheader.h  stringhash.cpp  stringhash.h  util.cpp  util.h
src/main/: main.cpp  main.h
